# app/couples/service/dto/relationship.go
@@ -1,5 +1,7 @@
 package dto
 
+import "time"
+
 type CouplesInfo struct {
 	UserId        int64  `json:"userId"`
 	UserNickName  string `json:"userNickName"`
@@ -12,6 +14,12 @@ type CouplesInfo struct {
 	MemorialDay int `json:"memorialDay"` //纪念日已过去天数
 }
 type RelationshipBinding struct {
-	RegistrationCode string `json:"registrationCode"`
-	UserId           int64  `json:"userId"`
+	RegistrationCodeEncrypt string    `json:"registrationCodeEncrypt"` //加密后的注册码
+	MemorialDate            time.Time `json:"memorialDate"`            //纪念日
+	UserId                  int64     `json:"userId"`
+}
+type RelationshipBinding2 struct {
+	RegistrationCodeDecryption string    `json:"registrationCodeDecryption"` //解密后的注册码
+	MemorialDate               time.Time `json:"memorialDate"`               //纪念日
+	UserId                     int64     `json:"userId"`
 }
