# docs/swagger.yaml
@@ -8,6 +8,14 @@ definitions:
       userId:
         type: integer
     type: object
+  dto.AddPhotoAlbum:
+    properties:
+      name:
+        type: string
+      type:
+        description: (0 情侣相册；1 个人相册)
+        type: string
+    type: object
   dto.CouplesInfo:
     properties:
       loverHeaderImg:
@@ -39,20 +47,13 @@ definitions:
         description: 动态发布者的昵称
         type: string
     type: object
-  dto.GetDynamicList:
-    properties:
-      content:
-        type: string
-      page:
-        description: 页码
-        type: integer
-      pageSize:
-        description: 每页大小
-        type: integer
-    type: object
   dto.RelationshipBinding:
     properties:
-      registrationCode:
+      memorialDate:
+        description: 纪念日
+        type: string
+      registrationCodeEncrypt:
+        description: 加密后的注册码
         type: string
       userId:
         type: integer
@@ -65,8 +66,6 @@ definitions:
         type: integer
       status:
         type: integer
-      updatedAt:
-        type: string
     type: object
   model.ChangePasswordRequest:
     properties:
@@ -179,6 +178,25 @@ paths:
       summary: 动态删除
       tags:
       - Dynamic
+    get:
+      parameters:
+      - description: ID
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 获取动态详情成功
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 查看动态详情
+      tags:
+      - Dynamic
     post:
       parameters:
       - description: 内容、用户id、动态状态
@@ -224,12 +242,17 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: 页码, 每页大小,选填：动态内容
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/dto.GetDynamicList'
+      - in: query
+        name: content
+        type: string
+      - description: 页码
+        in: query
+        name: page
+        type: integer
+      - description: 每页大小
+        in: query
+        name: pageSize
+        type: integer
       produces:
       - application/json
       responses:
@@ -261,6 +284,27 @@ paths:
       summary: 登录请求函数
       tags:
       - User
+  /api/v1/photo-album:
+    post:
+      parameters:
+      - description: 相册名称，相册类型
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.AddPhotoAlbum'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"相册创建成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 相册新增
+      tags:
+      - PhotoAlbum
   /api/v1/relationship:
     delete:
       parameters:
@@ -273,7 +317,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: '{"success":true,"data":{},"msg":"情侣关系绑定成功"}'
+          description: '{"success":true,"data":{},"msg":"情侣关系解绑成功"}'
           schema:
             type: string
       security:
@@ -283,7 +327,7 @@ paths:
       - Relationship
     post:
       parameters:
-      - description: 注册码，用户id
+      - description: 加密后的注册码，用户id
         in: body
         name: data
         required: true
@@ -298,7 +342,28 @@ paths:
             type: string
       security:
       - ApiKeyAuth: []
-      summary: 情侣关系绑定
+      summary: 情侣关系绑定（通过链接进行关系绑定）
+      tags:
+      - Relationship
+  /api/v1/relationship2:
+    post:
+      parameters:
+      - description: 未加密注册码，用户id
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RelationshipBinding'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"情侣关系绑定成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 情侣关系绑定（通过交换注册码进行关系绑定）
       tags:
       - Relationship
   /api/v1/sign:
